--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,6 +1,7 @@
 -   id: dataform-compile
     name: dataform compile
     entry: dataform compile
+    fail_fast: true
     language: node
     additional_dependencies: ["@dataform/cli@2.9.0"]
     files: (\.sqlx|\.js)$
